# learnENG

./: .gitignore  .gitmodules  CMakeLists.txt  InfraDes.md  LICENCE  README.md  learnENG.pro  learnENG.pro.user.4137a4a  learnENG.pro.user.a5c3d42  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  recitewords.cpp  recitewords.h  recitewords.ui  userdata.cpp  userdata.h  words.txt  wordslib.cpp  wordslib.h  wordslib.ui  wrongwords.cpp  wrongwords.h  wrongwords.ui
res/: res.qrc
src/: CMakeLists.txt  main.cpp
src/Controller/: AccountManager.cpp  AccountManager.h  Controller.cpp
src/Model/: AppSettingModel.cpp  AppSettingModel.h  CacheModel.cpp  CacheModel.h  DictDbModel.cpp  DictDbModel.h  Model.cpp  UserModel.cpp  UserModel.h
src/View/: AboutPage.cpp  AboutPage.h  HistoryPage.cpp  HistoryPage.h  HomePage.cpp  HomePage.h  LoginPage.cpp  LoginPage.h  MainWindow.cpp  MainWindow.h  MyPage.cpp  MyPage.h  RecitePage.cpp  RecitePage.h  SettingPage.cpp  SettingPage.h  StatisticsPage.cpp  StatisticsPage.h  TempPage.cpp  TempPage.h  View.cpp
